Initial requirements completed
