# src/controllers/authController.js
@@ -6,88 +6,31 @@ const ErrorHandler = require("../utils/ErrorHandler");
 const register = async (req, res) => {
   // #swagger.tags = ['auth']
   try {
-    const { name, email, password } = req.body;
-    if (
-      !password.match(
-        /(?=[A-Za-z0-9@#$%^&+!=]+$)^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[@#$%^&+!=])(?=.{8,}).*$/
-      )
-    ) {
-      return ErrorHandler(
-        "Password must contain atleast one uppercase letter, one special character and one number",
-        400,
-        req,
-        res
-      );
-    }
+    const { firstName, lastName, email, password } = req.body;
+    // if (
+    //   !password.match(
+    //     /(?=[A-Za-z0-9@#$%^&+!=]+$)^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[@#$%^&+!=])(?=.{8,}).*$/
+    //   )
+    // ) {
+    //   return ErrorHandler(
+    //     "Password must contain atleast one uppercase letter, one special character and one number",
+    //     400,
+    //     req,
+    //     res
+    //   );
+    // }
     const user = await User.findOne({ email });
     if (user) {
       return ErrorHandler("User already exists", 400, req, res);
     }
     const newUser = await User.create({
-      name,
+      firstName,
+      lastName,
       email,
       password,
     });
     newUser.save();
     return SuccessHandler("User created successfully", 200, res);
-  } catch (error) {
-    return ErrorHandler(error.message, 500, req, res);
-  }
-};
-
-//request email verification token
-const requestEmailToken = async (req, res) => {
-  // #swagger.tags = ['auth']
-
-  try {
-    const { email } = req.body;
-    const user = await User.findOne({ email });
-    if (!user) {
-      return ErrorHandler("User does not exist", 400, req, res);
-    }
-    const emailVerificationToken = Math.floor(100000 + Math.random() * 900000);
-    const emailVerificationTokenExpires = new Date(Date.now() + 10 * 60 * 1000);
-    user.emailVerificationToken = emailVerificationToken;
-    user.emailVerificationTokenExpires = emailVerificationTokenExpires;
-    await user.save();
-    const message = `Your email verification token is ${emailVerificationToken} and it expires in 10 minutes`;
-    const subject = `Email verification token`;
-    await sendMail(email, subject, message);
-    return SuccessHandler(
-      `Email verification token sent to ${email}`,
-      200,
-      res
-    );
-  } catch (error) {
-    return ErrorHandler(error.message, 500, req, res);
-  }
-};
-
-//verify email token
-const verifyEmail = async (req, res) => {
-  // #swagger.tags = ['auth']
-
-  try {
-    const { email, emailVerificationToken } = req.body;
-    const user = await User.findOne({ email });
-    if (!user) {
-      return res.status(400).json({
-        success: false,
-        message: "User does not exist",
-      });
-    }
-    if (
-      user.emailVerificationToken !== emailVerificationToken ||
-      user.emailVerificationTokenExpires < Date.now()
-    ) {
-      return ErrorHandler("Invalid token", 400, req, res);
-    }
-    user.emailVerified = true;
-    user.emailVerificationToken = null;
-    user.emailVerificationTokenExpires = null;
-    jwtToken = user.getJWTToken();
-    await user.save();
-    return SuccessHandler("Email verified successfully", 200, res);
   } catch (error) {
     return ErrorHandler(error.message, 500, req, res);
   }
@@ -107,11 +50,12 @@ const login = async (req, res) => {
     if (!isMatch) {
       return ErrorHandler("Invalid credentials", 400, req, res);
     }
-    if (!user.emailVerified) {
-      return ErrorHandler("Email not verified", 400, req, res);
-    }
     jwtToken = user.getJWTToken();
-    return SuccessHandler("Logged in successfully", 200, res);
+    return SuccessHandler(
+      { message: "Logged in successfully", user, jwtToken },
+      200,
+      res
+    );
   } catch (error) {
     return ErrorHandler(error.message, 500, req, res);
   }
@@ -144,7 +88,7 @@ const forgotPassword = async (req, res) => {
     user.passwordResetToken = passwordResetToken;
     user.passwordResetTokenExpires = passwordResetTokenExpires;
     await user.save();
-    const message = `Your password reset token is ${resetPasswordToken} and it expires in 10 minutes`;
+    const message = `Your password reset token is ${passwordResetToken} and it expires in 10 minutes`;
     const subject = `Password reset token`;
     await sendMail(email, subject, message);
     return SuccessHandler(`Password reset token sent to ${email}`, 200, res);
@@ -185,18 +129,18 @@ const updatePassword = async (req, res) => {
 
   try {
     const { currentPassword, newPassword } = req.body;
-    if (
-      !newPassword.match(
-        /(?=[A-Za-z0-9@#$%^&+!=]+$)^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[@#$%^&+!=])(?=.{8,}).*$/
-      )
-    ) {
-      return ErrorHandler(
-        "Password must contain at least 8 characters, 1 uppercase, 1 lowercase, 1 number and 1 special character",
-        400,
-        req,
-        res
-      );
-    }
+    // if (
+    //   !newPassword.match(
+    //     /(?=[A-Za-z0-9@#$%^&+!=]+$)^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[@#$%^&+!=])(?=.{8,}).*$/
+    //   )
+    // ) {
+    //   return ErrorHandler(
+    //     "Password must contain at least 8 characters, 1 uppercase, 1 lowercase, 1 number and 1 special character",
+    //     400,
+    //     req,
+    //     res
+    //   );
+    // }
     const user = await User.findById(req.user.id).select("+password");
     const isMatch = await user.comparePassword(currentPassword);
     if (!isMatch) {
@@ -221,8 +165,6 @@ const updatePassword = async (req, res) => {
 
 module.exports = {
   register,
-  requestEmailToken,
-  verifyEmail,
   login,
   logout,
   forgotPassword,
