# src/router/auth.js
@@ -8,8 +8,8 @@ router.route("/logout").get(auth.logout);
 //post
 router.route("/register").post(auth.register);
 router.route("/login").post(auth.login);
-router.route("/requestEmailToken").post(auth.requestEmailToken);
-router.route("/verifyEmail").post(auth.verifyEmail);
+// router.route("/requestEmailToken").post(auth.requestEmailToken);
+// router.route("/verifyEmail").post(auth.verifyEmail);
 router.route("/forgotPassword").post(auth.forgotPassword);
 //put
 router.route("/resetPassword").put(auth.resetPassword);
